# OOP_labs_2

./: CMakeLists.txt  README.md  main.cpp  twelve.cpp  twelve.h
tests/: test_lab2.cpp
